@@ -49,6 +49,9 @@ nocolor = yes | no				; Disable ANSI colors (-n)
 dumpcore = yes | no				; Dump core on failure (-g)
 quiet = yes | no				; Run quietly (-q)
 timestamp = yes | no				; Force timestamping on log entries to console (-T)
+user = asterisk					; User to run asterisk as (-U) NOTE: will require changes to
+						; directory and device permisions
+group = asterisk				; Group to run asterisk as (-G)
 
 ;These options have no command line equivalent
 cache_record_files = yes | no			; Cache record() files in another directory until completion
